--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
     "repository": {
     "type": "git",
-    "url": "https://github.com/Ericaan/test.git"
+    "url": "https://github.com/Ericaan/test"
   },
     "keywords": [
     "node",
